--- a/Parmentier_week_10.ipynb
+++ b/Parmentier_week_10.ipynb
@@ -169,41 +169,26 @@
         "  def print_product(self):\n",
         "    print(f\"Product {self.id} is {self.name} made by {self.manufacturer}. It costs ${self.price}\")\n",
         "\n",
-        "  def calculate_salesprice(self, sales_price):\n",
-        "    self.sales_price = (self.price *.80)\n",
+        "  def calculate_salesprice(self):\n",
+        "    self.sales_price = int(self.price * .80)\n",
         "    print(f\"The {self.name} is on sale for {self.sales_price}\")\n",
         "\n"
       ],
       "metadata": {
         "id": "75apcUeJ2VQo"
       },
-      "execution_count": 83,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# Execute the class above\n",
-        "\n",
-        "class Products:\n",
-        "  def __init__(self, id, name, price, description, manufacturer):\n",
-        "    self.id = id\n",
-        "    self.name = name\n",
-        "    self.price = price\n",
-        "    self.description = description\n",
-        "    self.manufacturer = manufacturer\n",
-        "\n",
-        "  def print_product(self):\n",
-        "    print(f\"Product {self.id} is {self.name} made by {self.manufacturer}. It costs ${self.price}\")\n",
-        "\n",
-        "  def calculate_salesprice(self, sales_price):\n",
-        "    self.sales_price = (self.price *.80)\n",
-        "    print(f\"The {self.name} is on sale for {self.sales_price}\")\n"
+        "# Execute the class above\n"
       ],
       "metadata": {
         "id": "TZiNWOl_2-oh"
       },
-      "execution_count": 26,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -216,7 +201,7 @@
       "metadata": {
         "id": "TT8qK1Ie3EVX"
       },
-      "execution_count": 27,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -230,22 +215,17 @@
       "metadata": {
         "id": "mobnFcMw3Icp",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 208
+          "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9a5e9b33-8c96-46d6-a620-11786f04b9fb"
+        "outputId": "c5de820d-2aae-4983-9af9-223a6fb8ef8c"
       },
-      "execution_count": 28,
+      "execution_count": 12,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-28-0cc36b80d3b2>\u001b[0m in \u001b[0;36m<cell line: 4>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# the desired text described above.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mproduct2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalculate_salesprice\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: Products.calculate_salesprice() missing 1 required positional argument: 'sales_price'"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The CR-V is on sale for 24000\n"
           ]
         }
       ]
